Fix overflow issue for excessively long task content

--- a/src/components/TaskList/taskList.module.scss
+++ b/src/components/TaskList/taskList.module.scss
@@ -37,3 +37,12 @@
   max-width: 3.5rem;
   font-size: 1.8rem;
 }
+
+.taskName {
+padding-right: 20px;
+  max-width: 60%; /* Giới hạn chiều rộng, tránh quá dài */
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  display: block;
+}
